k8s/apps/observability/thanos/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: thanos
  namespace: observability
spec:
  hosts:
    - 'thanos.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 9090
            host: thanos-query.observability.svc.cluster.local
          weight: 100
